ProjetoBase/compilador.output
Terminals unused in grammar

    LABEL
    TYPE
    ARRAY
    OF
    PROCEDURE
    FUNCTION
    INTEGER
    BOOLEAN
    GOTO
    IF
    THEN
    ELSE
    WHILE
    DO
    OR
    DIV
    AND
    NOT
    ABRE_CHAVES
    FECHA_CHAVES
    ABRE_COLCHETES
    FECHA_COLCHETES


Grammar

    0 $accept: programa $end

    1 $@1: %empty

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    3 $@2: %empty

    4 bloco: parte_declara_vars $@2 comando_composto

    5 parte_declara_vars: var

    6 $@3: %empty

    7 var: $@3 VAR declara_vars
    8    | %empty

    9 declara_vars: declara_vars declara_var
   10             | declara_var

   11 $@4: %empty

   12 declara_var: $@4 lista_id_var DOIS_PONTOS tipo PONTO_E_VIRGULA

   13 tipo: IDENT

   14 lista_id_var: lista_id_var VIRGULA IDENT
   15             | IDENT

   16 lista_idents: lista_idents VIRGULA IDENT
   17             | IDENT

   18 comando_composto: T_BEGIN comandos T_END

   19 comandos: atribuicao PONTO_E_VIRGULA comandos
   20         | atribuicao PONTO_E_VIRGULA

   21 $@5: %empty

   22 atribuicao: IDENT $@5 ATRIBUICAO NUMERO


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    PROGRAM (258) 2
    ABRE_PARENTESES (259) 2
    FECHA_PARENTESES (260) 2
    VIRGULA (261) 14 16
    PONTO_E_VIRGULA (262) 2 12 19 20
    DOIS_PONTOS (263) 12
    PONTO (264) 2
    T_BEGIN (265) 18
    T_END (266) 18
    VAR (267) 7
    IDENT (268) 2 13 14 15 16 17 22
    ATRIBUICAO (269) 22
    NUMERO (270) 22
    LABEL (271)
    TYPE (272)
    ARRAY (273)
    OF (274)
    PROCEDURE (275)
    FUNCTION (276)
    INTEGER (277)
    BOOLEAN (278)
    GOTO (279)
    IF (280)
    THEN (281)
    ELSE (282)
    WHILE (283)
    DO (284)
    OR (285)
    DIV (286)
    AND (287)
    NOT (288)
    ABRE_CHAVES (289)
    FECHA_CHAVES (290)
    ABRE_COLCHETES (291)
    FECHA_COLCHETES (292)


Nonterminals, with rules where they appear

    $accept (38)
        on left: 0
    programa (39)
        on left: 2
        on right: 0
    $@1 (40)
        on left: 1
        on right: 2
    bloco (41)
        on left: 4
        on right: 2
    $@2 (42)
        on left: 3
        on right: 4
    parte_declara_vars (43)
        on left: 5
        on right: 4
    var (44)
        on left: 7 8
        on right: 5
    $@3 (45)
        on left: 6
        on right: 7
    declara_vars (46)
        on left: 9 10
        on right: 7 9
    declara_var (47)
        on left: 12
        on right: 9 10
    $@4 (48)
        on left: 11
        on right: 12
    tipo (49)
        on left: 13
        on right: 12
    lista_id_var (50)
        on left: 14 15
        on right: 12 14
    lista_idents (51)
        on left: 16 17
        on right: 2 16
    comando_composto (52)
        on left: 18
        on right: 4
    comandos (53)
        on left: 19 20
        on right: 18 19
    atribuicao (54)
        on left: 22
        on right: 19 20
    $@5 (55)
        on left: 21
        on right: 22


State 0

    0 $accept: . programa $end

    $default  reduce using rule 1 ($@1)

    programa  go to state 1
    $@1       go to state 2


State 1

    0 $accept: programa . $end

    $end  shift, and go to state 3


State 2

    2 programa: $@1 . PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    PROGRAM  shift, and go to state 4


State 3

    0 $accept: programa $end .

    $default  accept


State 4

    2 programa: $@1 PROGRAM . IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  shift, and go to state 5


State 5

    2 programa: $@1 PROGRAM IDENT . ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    ABRE_PARENTESES  shift, and go to state 6


State 6

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES . lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  shift, and go to state 7

    lista_idents  go to state 8


State 7

   17 lista_idents: IDENT .

    $default  reduce using rule 17 (lista_idents)


State 8

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents . FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO
   16 lista_idents: lista_idents . VIRGULA IDENT

    FECHA_PARENTESES  shift, and go to state 9
    VIRGULA           shift, and go to state 10


State 9

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES . PONTO_E_VIRGULA bloco PONTO

    PONTO_E_VIRGULA  shift, and go to state 11


State 10

   16 lista_idents: lista_idents VIRGULA . IDENT

    IDENT  shift, and go to state 12


State 11

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA . bloco PONTO

    T_BEGIN   reduce using rule 8 (var)
    $default  reduce using rule 6 ($@3)

    bloco               go to state 13
    parte_declara_vars  go to state 14
    var                 go to state 15
    $@3                 go to state 16


State 12

   16 lista_idents: lista_idents VIRGULA IDENT .

    $default  reduce using rule 16 (lista_idents)


State 13

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco . PONTO

    PONTO  shift, and go to state 17


State 14

    4 bloco: parte_declara_vars . $@2 comando_composto

    $default  reduce using rule 3 ($@2)

    $@2  go to state 18


State 15

    5 parte_declara_vars: var .

    $default  reduce using rule 5 (parte_declara_vars)


State 16

    7 var: $@3 . VAR declara_vars

    VAR  shift, and go to state 19


State 17

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO .

    $default  reduce using rule 2 (programa)


State 18

    4 bloco: parte_declara_vars $@2 . comando_composto

    T_BEGIN  shift, and go to state 20

    comando_composto  go to state 21


State 19

    7 var: $@3 VAR . declara_vars

    $default  reduce using rule 11 ($@4)

    declara_vars  go to state 22
    declara_var   go to state 23
    $@4           go to state 24


State 20

   18 comando_composto: T_BEGIN . comandos T_END

    IDENT  shift, and go to state 25

    comandos    go to state 26
    atribuicao  go to state 27


State 21

    4 bloco: parte_declara_vars $@2 comando_composto .

    $default  reduce using rule 4 (bloco)


State 22

    7 var: $@3 VAR declara_vars .
    9 declara_vars: declara_vars . declara_var

    IDENT     reduce using rule 11 ($@4)
    $default  reduce using rule 7 (var)

    declara_var  go to state 28
    $@4          go to state 24


State 23

   10 declara_vars: declara_var .

    $default  reduce using rule 10 (declara_vars)


State 24

   12 declara_var: $@4 . lista_id_var DOIS_PONTOS tipo PONTO_E_VIRGULA

    IDENT  shift, and go to state 29

    lista_id_var  go to state 30


State 25

   22 atribuicao: IDENT . $@5 ATRIBUICAO NUMERO

    $default  reduce using rule 21 ($@5)

    $@5  go to state 31


State 26

   18 comando_composto: T_BEGIN comandos . T_END

    T_END  shift, and go to state 32


State 27

   19 comandos: atribuicao . PONTO_E_VIRGULA comandos
   20         | atribuicao . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 33


State 28

    9 declara_vars: declara_vars declara_var .

    $default  reduce using rule 9 (declara_vars)


State 29

   15 lista_id_var: IDENT .

    $default  reduce using rule 15 (lista_id_var)


State 30

   12 declara_var: $@4 lista_id_var . DOIS_PONTOS tipo PONTO_E_VIRGULA
   14 lista_id_var: lista_id_var . VIRGULA IDENT

    VIRGULA      shift, and go to state 34
    DOIS_PONTOS  shift, and go to state 35


State 31

   22 atribuicao: IDENT $@5 . ATRIBUICAO NUMERO

    ATRIBUICAO  shift, and go to state 36


State 32

   18 comando_composto: T_BEGIN comandos T_END .

    $default  reduce using rule 18 (comando_composto)


State 33

   19 comandos: atribuicao PONTO_E_VIRGULA . comandos
   20         | atribuicao PONTO_E_VIRGULA .

    IDENT  shift, and go to state 25

    $default  reduce using rule 20 (comandos)

    comandos    go to state 37
    atribuicao  go to state 27


State 34

   14 lista_id_var: lista_id_var VIRGULA . IDENT

    IDENT  shift, and go to state 38


State 35

   12 declara_var: $@4 lista_id_var DOIS_PONTOS . tipo PONTO_E_VIRGULA

    IDENT  shift, and go to state 39

    tipo  go to state 40


State 36

   22 atribuicao: IDENT $@5 ATRIBUICAO . NUMERO

    NUMERO  shift, and go to state 41


State 37

   19 comandos: atribuicao PONTO_E_VIRGULA comandos .

    $default  reduce using rule 19 (comandos)


State 38

   14 lista_id_var: lista_id_var VIRGULA IDENT .

    $default  reduce using rule 14 (lista_id_var)


State 39

   13 tipo: IDENT .

    $default  reduce using rule 13 (tipo)


State 40

   12 declara_var: $@4 lista_id_var DOIS_PONTOS tipo . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 42


State 41

   22 atribuicao: IDENT $@5 ATRIBUICAO NUMERO .

    $default  reduce using rule 22 (atribuicao)


State 42

   12 declara_var: $@4 lista_id_var DOIS_PONTOS tipo PONTO_E_VIRGULA .

    $default  reduce using rule 12 (declara_var)
